# BigraphER

./: .dockerignore  .gitignore  .merlin  .ocamlformat  Bigrapher.odocl  CHANGES.md  Dockerfile  INSTALL  LICENSE.md  Makefile  Makefile.config  Makefile.config.in  README  README.md  README.md.ab  TODO  _oasis  _tags  banner  big_json.opam  bigraph.opam  bigrapher.install  bigrapher.itarget  bigrapher.ml  bigrapher.opam  bitbucket-pipelines.yml  build-static-bins.sh  build.sh  configure  configure.ac  default.nix  descr  dune  dune-project  dune-workspace.dev  dune-workspace.static  env.ml  fail  lexer_mod.mll  lexer_pred.mll  (+12 more)
0.3/: README  base.ml  base.mli  (+8 more)
bigraph/test/: bigraph.t  cobertura.ml  debug_ksat.ml  debug_ksat.reference  dune  io.ml  junit.ml  test_brs.ml  test_bug_savannah.ml  test_bug_savannah.reference  test_bug_spec.ml  test_bug_spec.reference  test_decomp.ml  test_inst.ml  test_match.ml  test_solid.ml
bigraph/test/files/: P40.big  T29.big
bigraph_json/: CHANGES.md  Makefile  README.md  big_json.opam  descr  dune-project
bigraph_json/src/: big_json.ml  big_json.mli  dune  index.mld
bigraph_json/test/: dune
bigrapher/: .dockerignore  .gitignore  .merlin  CHANGES.md  Dockerfile  INSTALL  LICENSE  LICENSE.md  Makefile  Makefile.config  Makefile.config.ab  README.md  README.md.ab  _oasis  _tags  bigrapher.ml  bigrapher.opam.template  configure  dune-project  lexer_main.mll  myocamlbuild.ml  setup.ml  shippable.yml  store.ml
bigrapher/big-mode/: big-mode.el  big-mode.elc  dune
bigrapher/examples/: abrs-mobilesink.big  actors-sorts.big  actors.big  closures.big  ex.ml  hospital.big  mdp_wsn.big  merge.big  multiset-matching.big  norules.big  prob.big  prob_wsn.big  rrim2.big  rts_cts.big  savannah.big  spec.big  stoch_occ.big  unique_entities.big  virus-multifirewall.big  virus-simpl.big  wireless.big
bigrapher/lib/: META  base.ml  base.mli  big.ml  big.mli  bigraph.mldylib  bigraph.mllib  bigraph_api.odocl  brs.ml  brs.mli  cnf.ml  cnf.mli  ctrl.mli  export.ml  export.mli  fun.ml  fun.mli  intSet.ml  intSet.mli  iso.ml  iso.mli  link.ml  link.mli  mcs.ml  model.stm2  node.mli  nodes.ml  nodes.mli  place.ml  place.mli  port.ml  port.mli  priType.ml  rel.ml  rel.mli  rpo.ml  rrType.ml  rrType.mli  sbrs.ml  sbrs.mli  (+6 more)
bigrapher/man/: Cnf.3o  bigrapher-full.1  bigrapher-full.1.ab  bigrapher-full.html  bigrapher-sim.1  bigrapher-sim.1.ab  bigrapher-sim.html  bigrapher-validate.1  bigrapher-validate.html  bigrapher.1  bigrapher.1.ab  bigrapher.html  dune  mandoc.css
bigrapher/opam/: opam  opam.ab  url
bigrapher/opam/files/: bigrapher.install
bigrapher/scripts/: profile.sh  shippable-build.sh  shippable-cover.sh  shippable-link.sh  shippable-opam-lint.sh  shippable-opam.sh  shippable-tests.sh  stats.sh  url.sh
bigrapher/shippable/codecoverage/: coverage.xml
bigrapher/src/: ast.ml  bigrapher.ml  cmd.ml  dune  export.ml  index.mld  lexer.mll  loc.mli  parser.mly  store.ml  unify.ml  version.ml
bigrapher/tests/: bigrapher.t  bigrapher_prism_output.t  cobertura.ml  dune  io.ml  junit.ml  junit.mllib  test_brs.ml  test_decomp.ml  test_match.ml  test_parser.ml  test_speed.ml  tests.ocp
bigrapher/tests/files/: abrs-mobilesink.reference  actors.reference  conditional_turn_taking.reference  hospital.reference  iter-merge.reference  match.reference  mdp_wsn.reference  mdp_wsn.reference.tra  merge.reference  multiset-matching.reference  norules.reference  parser.in  prob_wsn.reference  prob_wsn.reference.tra  rrim2.reference  savannah.reference  stoch_occ.reference  stoch_occ.reference.tra  string_params.reference  unique_entities.reference  virus-multifirewall.reference  virus-simpl.reference  wireless.reference
bigrapher/tests/files/link/: byte-0.xml  byte-1.xml  ex.reference  native-0.xml
bigrapher/tests/files/lint/: error.xml  passed.xml
bigrapher/tests/files/match/: P1.big
bigrapher/utils/: META  dune  utils.ml
kissat/src/: dune  index.mld  kissat.ml  kissat.mli  stubs.c
kissat/src/config/: discover.ml
kissat/src/kissat_c/: configure  makefile.in
kissat/src/kissat_c/scripts/: generate-build-header.sh
man/: bigrapher-full.1  bigrapher-full.1.ab  bigrapher-full.html  bigrapher-sim.1  bigrapher-sim.1.ab  bigrapher-sim.html  bigrapher-validate.1  bigrapher-validate.1.ab  bigrapher-validate.html  bigrapher.1  bigrapher.1.ab  bigrapher.1.in  bigrapher.html  dune  test.1  test.html
maple/src/: dune  index.mld  maple.ml  maple.mli  stubs.cpp
maple/src/config/: discover.ml
maple/src/mapleLCMDiscChronoBT_c/: Makefile
maple/src/mapleLCMDiscChronoBT_c/core/: Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
maple/src/mapleLCMDiscChronoBT_c/mtl/: Alg.h  Alloc.h  Heap.h  IntTypes.h  Map.h  Queue.h  Sort.h  Vec.h  XAlloc.h
maple/src/mapleLCMDiscChronoBT_c/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
minicard/src/: dune  index.mld  minicard.ml  minicard.mli  stubs.cpp
minicard/src/config/: discover.ml
minicard/src/minicard_c/: Makefile
minicard/src/minicard_c/minicard/: Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h  opb.h
minisat/: Makefile  dune-project  minisat.opam  shippable.yaml
minisat/src/: .merlin  dune  index.mld  minisat.ml  minisat.mli  stubs.cpp
minisat/src/config/: discover.ml
minisat/test/: .merlin  dune  minisat.t  test.ml  test.reference
test/: .merlin  dune  io.ml  jbuild  test.ml  test_brs.ml  test_inst.ml  test_match.ml
tests/: META  _tags  cobertura.ml  dune  global.ml  io.ml  junit.ml  test.itarget  test.ml  test_brs.ml  test_decomp.ml  test_match.ml  test_parser.ml  test_rpo.ml  tests.ocp
tests/files/: actors.reference  brs-junit.xml  brs.reference  closures.reference  conditional_turn_taking.reference  dec.reference  equality.reference  ex.reference  hospital.reference  iter-merge.reference  link_inst_map.reference  merge.reference  multiset-matching.reference  parser.in  prob.reference  rrim.reference  rrim2.reference  rts_cts.big  rts_cts.reference  savannah.reference  spec.reference  unique_entities.reference  wireless.reference
tests/files/link/: native-1.xml
(+343 files in other folders)
