opam-version: "1.2"
maintainer: "Michele Sevegnani <michele.sevegnani@glasgow.ac.uk>"
version: "1.0.0"
authors: [ "Michele Sevegnani" ]
license: "BSD-3-clause"
tags: [ "bigraphs" ]
homepage: "http://www.dcs.gla.ac.uk/~michele/bigrapher.html"
dev-repo: "git+https://bitbucket.org/mseve/bigraph.git"

depends: [
  "jbuilder" {build & >= "1.0+beta13"}
  "minisat" {>= "0.5.3"}
]

build: [ "jbuilder" "build" "-p" name "-j" jobs ]

build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]

build-doc: [ "jbuilder" "build" "@doc" "-j" jobs ]
    
available: [ ocaml-version >= "4.02.0" ]

conflicts: [ "bigrapher" {<= "1.6.1"} ]
