opam-version: "1.2"
maintainer: "Michele Sevegnani <michele.sevegnani@glasgow.ac.uk>"
version: "1.9.0"
authors: [ "Michele Sevegnani" ]
license: "BSD-2-clause"
homepage: "http://www.dcs.gla.ac.uk/~michele/bigrapher.html"
dev-repo: "https://bitbucket.org/mseve/bigrapher.git"

tags: [
  "bigraphs"
  "rewriting engine"
  "stochastic simulation"
  "org:dcs"
]

depends: [
  "dune" {build & >= "1.0.0"}
  "menhir" {build}
  "conf-graphviz"
  "big_json" {>= "0.2.0"}
]

build: [ "dune" "build" "-p" name "-j" jobs ]

build-test: [ "dune" "runtest" "-p" name "-j" jobs ]

build-doc: [ "dune" "build" "@doc" "-j" jobs ]
    
post-messages: [
"bigrapher installed.

Quick setup for EMACS
-------------------
Add opam emacs directory to your load-path by appending this to your .emacs:
  ;; Add opam emacs directory to the load-path
  (setq opam-share (substring (shell-command-to-string \"opam config var share 2> /dev/null\") 0 -1))
  (add-to-list 'load-path (concat opam-share \"/emacs/site-lisp\"))
  ;; Load big-mode
  (require 'big-mode)
"
  {success}
]
