opam-version: "1.2"
maintainer: "Michele Sevegnani <michele.sevegnani@glasgow.ac.uk>"
version: "0.2.0"
authors: [ "Michele Sevegnani <michele.sevegnani@glasgow.ac.uk>" ]
license: "BSD-2-clause"
tags: [ "bigraphs" "json" "codec" "org:dcs" ]
homepage: "http://www.dcs.gla.ac.uk/~michele/docs/_doc/big_json"
dev-repo: "git+https://bitbucket.org/mseve/big_json.git"

depends: [
  "dune" {build & >= "1.0.0"}
  "jsonm" {>= "1.0.1"}
  "bigraph" {>= "1.3.0"}
  "odoc" {doc}
]

build: [ "dune" "build" "-p" name "-j" jobs ]

build-test: [ "dune" "runtest" "-p" name "-j" jobs ]

build-doc: [ "dune" "build" "@doc" "-j" jobs ]
    
available: [ ocaml-version >= "4.03.0" ]
