(lang dune 2.0)
(name minisat)
(version 0.5.3)
(generate_opam_files true)

(source (uri https://bitbucket.org/uog-bigraph/bigraph-tools/))
(license BSD-3-Clause)
(authors "Michele Sevegnani" "Blair Archibald")
(maintainers "michele.sevegnani@glasgow.ac.uk")
(homepage "http://www.dcs.gla.ac.uk/~michele/minisat.html")
(documentation "http://www.dcs.gla.ac.uk/~michele/docs/_doc/minisat")

(package
  (name minisat)
  (synopsis "Bindings for the SAT solver MiniSAT")
  (tags ("SAT solver" "org:dcs"))
  (depends
    (dune (and :build (>= 2.0.0)))
    (odoc :with-doc)))
