(executables
 (names test_match test_decomp test_brs test_inst)
 (libraries bigraph)
)

(alias
 (name    runtest)
 (deps    test_match.exe)
 (action  (run ${<} ${ROOT}/../../files ${ROOT}/../../shippable/testresults))
)

(alias
 (name    runtest)
 (deps    test_decomp.exe)
 (action  (run ${<} ${ROOT}/../../files/ ${ROOT}/../../shippable/testresults decomp-junit.xml))
)

(alias
 (name    runtest)
 (deps    test_brs.exe)
 (action  (run ${<} ${ROOT}/../../shippable/testresults brs-junit.xml))
)

(alias
 (name    runtest)
 (deps    test_inst.exe)
 (action  (run ${<} ${ROOT}/../../shippable/testresults inst-junit.xml))
)

