(executables
 (names test_match test_decomp test_brs test_inst)
 (libraries bigraph))

(alias
 (name    runtest)
 (deps    (:exe test_match.exe)
          (glob_files ../files/*.big))
 (action  (run %{exe} %{project_root}/files shippable/testresults)))

(alias
 (name    runtest)
 (deps    (:exe test_decomp.exe)
          (glob_files ../files/*.big))
 (action  (run %{exe} %{project_root}/files/ shippable/testresults decomp-junit.xml)))

(alias
 (name    runtest)
 (deps    (:exe test_brs.exe))
 (action  (run %{exe} shippable/testresults brs-junit.xml)))

(alias
 (name    runtest)
 (deps    (:exe test_inst.exe))
 (action  (run %{exe} shippable/testresults inst-junit.xml)))
