(executables
 (names test_parser)
 (libraries bigraph unix utils))

(alias
 (name runtest)
 (deps
     (glob_files ../examples/*.big)
     (glob_files files/*.reference)
     )
 (action (run %{exe:test_parser.exe}
              %{bin:bigrapher}
              %{dep:files/parser.in}
               shippable/testresults parser-junit.xml)))
