(executables
 (names test_match test_decomp test_brs test_inst test_solid)
 (libraries CI_utils bigraph))

(rule
 (alias runtest)
 (deps
  (:exe test_match.exe)
  (glob_files ../files/*.big))
 (action
  (progn
   (run %{bin:mkdir} -p %{project_root}/shippable/testresults)
   (run %{exe} ../files %{project_root}/shippable/testresults))))

(rule
 (alias runtest)
 (deps
  (:exe test_decomp.exe)
  (glob_files ../files/*.big))
 (action
  (progn
   (run %{bin:mkdir} -p %{project_root}/shippable/testresults)
   (run %{exe} ../files/ %{project_root}/shippable/testresults
     decomp-junit.xml))))

(rule
 (alias runtest)
 (deps
  (:exe test_brs.exe))
 (action
  (progn
   (run %{bin:mkdir} -p %{project_root}/shippable/testresults)
   (run %{exe} %{project_root}/shippable/testresults brs-junit.xml))))

(rule
 (alias runtest)
 (deps
  (:exe test_inst.exe))
 (action
  (run %{exe} %{project_root}/shippable/testresults inst-junit.xml)))
