(executables
 (names test_match test_decomp test_brs test_inst test_bug_savannah
   debug_ksat test_bug_spec)
 (libraries CI_utils bigraph))

(cram
 (deps
  test_match.exe
  test_inst.exe
  test_decomp.exe
  test_brs.exe
  test_bug_savannah.exe
  test_bug_spec.exe
  debug_ksat.exe
  (glob_files ./files/*.big)))
