(rule
 (target bigrapher.1)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:bigrapher} --help=groff))))

(rule
 (target bigrapher-sim.1)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:bigrapher} sim --help=groff))))

(rule
 (target bigrapher-full.1)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:bigrapher} full --help=groff))))

(rule
 (target bigrapher-validate.1)
 (action
  (with-stdout-to
   %{target}
   (run %{bin:bigrapher} validate --help=groff))))

(install
 (package bigrapher)
 (section man)
 (files bigrapher.1 bigrapher-validate.1 bigrapher-full.1 bigrapher-sim.1))
