(ocamllex
 (modules lexer))

(menhir
 (flags --explain --strict)
 (modules parser))

(executables
 (package bigrapher)
 (names bigrapher)
 (public_names bigrapher)
 (modes exe)
 (ocamlopt_flags
  (:standard -O3 -inline 100 -ccopt -ffast-math))
 (libraries bigraph big_json utils cmdliner))

(documentation
 (package bigrapher)
 (mld_files (:standard)))
