(executable
 (name test_speed)
 (libraries bigraph CI_utils unix))

(cram
 (deps
  %{bin:bigrapher}
  (glob_files ../examples/*.big)))

(cram
 (deps
  %{bin:bigrapher}
  ../examples/prob_wsn.big
  ../examples/mdp_wsn.big
  ../examples/stoch_occ.big))

(alias
 (name speed)
 (deps
  (file ../examples/rts_cts.big)
  (file ../examples/hospital.big)
  (file ../examples/conditional_turn_taking.big)
  (file ../examples/savannah-general.big))
 (package bigrapher))

(rule
 (alias speed)
 (deps
  (:exe test_speed.exe))
 (action
  (progn
   (setenv
    BIGSOLVER
    MSAT
    (run %{exe} %{bin:bigrapher}))
   (setenv
    BIGSOLVER
    MCARD
    (run %{exe} %{bin:bigrapher}))
   (setenv
    BIGSOLVER
    MAPLE
    (run %{exe} %{bin:bigrapher}))
   (setenv
    BIGSOLVER
    KSAT
    (run %{exe} %{bin:bigrapher})))))
