(data_only_dirs minicard_c)

(rule
 (deps
  (source_tree minicard_c))
 (targets libminicard_c.a dllminicard_c.so)
 (enabled_if
  (and
   (<> %{system} freebsd)
   (<> %{system} netbsd)
   (<> %{system} openbsd)))
 (action
  (progn
   (chdir
    minicard_c
    (run make lr lsh))
   (run cp minicard_c/build/release/lib/libminicard.a libminicard_c.a)
   (run cp minicard_c/build/dynamic/lib/libminicard.so dllminicard_c.so))))

(rule
 (deps
  (source_tree minicard_c))
 (targets libminicard_c.a dllminicard_c.so)
 (enabled_if
  (or
   (= %{system} freebsd)
   (= %{system} netbsd)
   (= %{system} openbsd)))
 (action
  (progn
   (chdir
    minicard_c
    (run gmake lr lsh))
   (run cp minicard_c/build/release/lib/libminicard.a libminicard_c.a)
   (run cp minicard_c/build/dynamic/lib/libminicard.so dllminicard_c.so))))

(library
 (name minicard)
 (foreign_archives minicard_c)
 (public_name minicard)
 (foreign_stubs
  (language cxx)
  (names stubs)
  (flags
   (:include flags.sexp)))
 (c_library_flags
  (:include libs.sexp))
 (synopsis "OCaml bindings for the MiniCARD cardinality solver"))

(rule
 (targets flags.sexp libs.sexp)
 (deps
  (:discover config/discover.exe)
  libminicard_c.a
  dllminicard_c.so)
 (action
  (run %{discover})))

(documentation
 (package minicard)
 (mld_files (:standard)))
