(library
 (name minisat)
 (public_name minisat)
 (foreign_stubs
  (language cxx)
  (names stubs)
  (flags -pedantic -fPIC -O3 -I/include))
 (c_library_flags
  (-lstdc++ -lminisat -lz))
 (synopsis "OCaml bindings for the MiniSAT SAT solver"))

(documentation
 (package minisat)
 (mld_files (:standard)))
